bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: Missing closing brace `}' assumed here
litMessage() match {
^